--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/5961fcb8e2.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./main.css">
     <title>Soweplay</title>
 </head>
@@ -11,6 +12,16 @@
     <div class="container">
         <div class="section">
             <img class="img-responsive" src="./img/soweplay-logo.png" alt="">
+            <div class="social">
+                <div class="links">
+                   <a href="http://instagram.com/soweplay.music"><i class="fab fa-instagram"></i></a>
+                   <a href="http://twitter.com/soweplay_music"> <i class="fab fa-twitter"></i></a>
+                   <a href="http://"> <i class="fab fa-spotify"></i></a>
+                </div>
+            </div>
+            <div class="yt-container">
+                <iframe src="https://www.youtube.com/embed/videoseries?list=PLtGFsgTyH30WYN8xfthDDc4WPhfhnsPCv" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
         </div>
     </div>
 
