CSS e Elementos novos

--- a/index.html
+++ b/index.html
@@ -4,20 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/5961fcb8e2.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="./typo.css">
     <title>Soweplay</title>
 </head>
 <body>
     
     <div class="container">
         <div class="section">
-            <img class="img-responsive" src="./img/soweplay-logo.png" alt="">
+            <img class="img-responsive logo" src="./img/soweplay-logo.png" alt="">
             <div class="social">
                 <div class="links">
                    <a href="http://instagram.com/soweplay.music"><i class="fab fa-instagram"></i></a>
                    <a href="http://twitter.com/soweplay_music"> <i class="fab fa-twitter"></i></a>
                    <a href="http://"> <i class="fab fa-spotify"></i></a>
+                   <a href="http://eepurl.com/g2ZtJL"><i class="fas fa-envelope-open"></i></a>
                 </div>
+            </div>
+        </div>
+        <div class="section">
+            <div class="texto">
+                <h2>Fique em casa com a Soweplay!</h2>
+                <p>Estamos vivendo um momento super delicado devido a pandemia de <strong>COVID-19</strong> e ficar em casa é fundamental para que o sistema de saúde não entre em um colapso total. Preparamos uma série de vídeos com o melhor som da banda pra você passar a quarentena bem de boa!</p>
             </div>
             <div class="yt-container">
                 <iframe src="https://www.youtube.com/embed/videoseries?list=PLtGFsgTyH30WYN8xfthDDc4WPhfhnsPCv" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
